Currently the 'Install' button in the update dialog is never activated. It is because we do not provide automatic download of new version. In order to be able to have this functionality, we need to make sure that the download is safe - that the cannot get a binary from some malicious site instead. The code needs review & update in case there are dangerous bits there; then we can enable this.
MAB - as discussed at the ESC.
Short term, we should at least update the help: https://help.libreoffice.org/swriter/EXTENSIONS_HID_CHECK_FOR_UPD_DLG
Fix priority for MABs.
@Jan is this MAB still reproducible with 4.3.x releases?
(In reply to Jan Holesovsky from comment #0) > Currently the 'Install' button in the update dialog is never activated. CONFIRMED with 4.3.2.2 + Ubuntu 14.04 REPRO: 1) Open LibreOffice 2) Help -> Check for updates. RESULT: LO 4.3.4 is offered for download, but the 'Install' button stays grayed-out
Can we consider using Sparkle/WinSparkle instead?
(In reply to Adolfo Jayme from comment #6) > Can we consider using Sparkle/WinSparkle instead? That could be another idea for GSoC. Integrating Sparkle would fix some long-requested enhancements: it supports diff-based (incremental) updates, avoiding huge downloads (bug 54242); it supports displaying release notes (bug 69042)… Also, Sparkle is an actively maintained project, and integrating it would reduce the burden in maintaining our custom mechanisms.
hi Adolfo, is the "Reuse Mozilla's rolling update mechanism for LibreOffice" in the GSOC 2015 projects something related to this? https://wiki.documentfoundation.org/Development/GSoC/2015
Update from GSoC 2015 wrapup from http://bosdonnat.fr/gsoc-2015-wrap-up.html Mozilla update system for LibreOffice from Nathan Yi Although Nathan did not have time to fully implement the UI and server-side backend components of the project, he managed to do in-place upgrades of LibreOffice using full and partial (version-to-version) patches. These patches can optionally be signed for secure transport over the Internet. Wiki entry: https://wiki.documentfoundation.org/Development/GSoC/Ideas#Reuse_Mozilla.27s_rolling_update_mechanism_for_LibreOffice
*** Bug 99268 has been marked as a duplicate of this bug. ***
*** Bug 62637 has been marked as a duplicate of this bug. ***
*** Bug 105619 has been marked as a duplicate of this bug. ***
I am curious about the status of this issue. It's been active since 2014 and no apparent progress or news since 2015.
linux and windows have seen work on using MAR updater for LO. Sadly that effort has not taken macOS into account.
Is this issue still open?
I am currently using LibreOffice 6.0.1 on Win 10 and I am still experiencing this bug.
Still exists in version: 6.3.0.0.alpha0+ (x64) Build ID: 0f25a3c36f27fd51453b9a9115f236b83c143684 CPU threads: 8; OS: Windows 10.0; UI render: GL; VCL: win; TinderBox: Win-x86_64@42, Branch:master, Time: 2018-11-27_20:06:55 Locale: zh-TW (zh_TW); UI-Language: en-US Calc: threaded
Automatic updates were implemented by Markus Mohrhard, please see - https://mmohrhard.wordpress.com/2017/08/22/announcing-automatically-updating-daily-windows-libreoffice-builds/ - https://mmohrhard.wordpress.com/2017/06/21/announcing-automatically-updating-libreoffice-builds/ although they are not used in production releases, yet.
Changing priority back to 'medium' since the number of duplicates is lower than 5
*** Bug 125451 has been marked as a duplicate of this bug. ***
*** Bug 144426 has been marked as a duplicate of this bug. ***
Considering the duplicates, shouldn't the bug priority be updated?
*** Bug 151466 has been marked as a duplicate of this bug. ***
What about removing the "install" button waiting for the implementation of the lacking code to implement it?
What can I do to promote this feature? There are lots of good reasons to have this feature implemented. For me it's a kind of basic feature for all user-friendly and safe software to allow for automatic upgrades (see https://ask.libreoffice.org/t/wann-wird-das-automatische-update-endlich-implementiert/43530 for some thoughts on this).
Miklos: would it be possible ESC takes a look at this one? I mean: 1) Do we still want this feature or should we just use update to know if there's an update (and the user does the job)? 2) Let's say I got 7.4.5 installed, do we want LO detects there's 7.4.7 or should it detect 7.5.4 ? 3) Depending on the OS, the install can fail (eg: on Linux, I prefer trusting repo manager since a dependency may lack) so is it only for Windows (and perhaps macOS?)? 4) What's the status of the current implementation in LO? Reading https://mmohrhard.wordpress.com/2017/08/22/announcing-automatically-updating-daily-windows-libreoffice-builds/ it seems there are still work to do but not sure Markus would work on it? Above all it talks about daily builds, it's very specific. I don't expect someone who has important documents should give a try to a dev version only if very clearly informed. 5) if we enable this feature, who will treat the bugtrackers related to this? I may be wrong but only Markus was working on it, would he still want to help here? Did he have some backup who would help if it's not the case? IMHO, if nobody is volunteer to work on this, the feature should be removed, no need to pile up bugs => less disappointment for users, less work for QA.
Will add it to the agenda. My memory is that Markus did this based on the Mozilla updater, but that didn't work out, there was a TDF tender to try this again (based on lessons from the first one), but TDF decided to not award that to anyone, and currently they are working on this year's tender budget. But possibly I forgot about something, I'll link the minutes here in 2 days.
Sorry it took this long, unexpected events delayed this. Today's ESC minutes: https://lists.freedesktop.org/archives/libreoffice/2023-July/090623.html
(In reply to Miklos Vajna from comment #28) > Sorry it took this long, unexpected events delayed this. Today's ESC minutes: > > https://lists.freedesktop.org/archives/libreoffice/2023-July/090623.html I read the ESC but what's the conclusion? Eg: can we consider since there's no conflict we can remove the "Install" button or even the whole part?
(In reply to Julien Nabet from comment #29) > (In reply to Miklos Vajna from comment #28) > > Sorry it took this long, unexpected events delayed this. Today's ESC minutes: > > > > https://lists.freedesktop.org/archives/libreoffice/2023-July/090623.html > > I read the ESC but what's the conclusion? Eg: can we consider since there's > no conflict we can remove the "Install" button or even the whole part? +1 to simply *remove* the 'Install' button (for now) absent MAR or other "incremental" updating, at which point the action would become 'Apply' or 'Update' and maybe could be moved into the 'About...' dialog. Otherwise the 'Download' button remains a redirection to the project download page(s). But in reality with a little refactoring could become a build time adjustment for other community packagers: PortableApps, Flatpak, Snap, AppImage to link to and promote their release channels. There are better ways to drive donation campaign(s) than the downloads landing page.
Yes, probably you can go ahead and remove that button for now. Thanks.
I've submitted this to remove Install button and related: https://gerrit.libreoffice.org/c/core/+/154515
Julien Nabet committed a patch related to this issue. It has been pushed to "master": https://git.libreoffice.org/core/commit/e43d5776fee7c89029389fcc3b8011d041033108 tdf#74934: remove Install button and related It will be available in 24.2.0. The patch should be included in the daily builds available at https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: https://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
Patch for 7.6 waiting for review here: https://gerrit.libreoffice.org/c/core/+/154467
Julien Nabet committed a patch related to this issue. It has been pushed to "libreoffice-7-6": https://git.libreoffice.org/core/commit/7468041cd84d21297a12574e385ea3ff166fc134 tdf#74934: remove Install button and related It will be available in 7.6.0.2. The patch should be included in the daily builds available at https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: https://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.