tdf#74934: remove Install button and related

Change-Id: I7866f11e744f4159f1ff5fb5175ee7fe87bbf4a7
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154515
Tested-by: Jenkins
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>
(cherry picked from commit e9ff8f1b29f75f25635b6e324bce373b1bcefb94)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154467
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>